--- a/websiteWR/src/app/Admin/allocate-drivers/allocate-drivers.component.html
+++ b/websiteWR/src/app/Admin/allocate-drivers/allocate-drivers.component.html
@@ -1,17 +1,22 @@
 <app-spinner style="margin-top: 25px" *ngIf="isLoading"></app-spinner>
-<div class="allocate-driver" *ngIf="!isLoading">
-  <input
-    placeholder="Choose driver"
-    nz-input
-    [(ngModel)]="selectedDriver"
-    (input)="onInput($event)"
-    [nzAutocomplete]="driverAutocomplete"
-  />
-  <nz-autocomplete #driverAutocomplete>
-    <nz-auto-option
-      *ngFor="let option of filteredDrivers"
-      [nzValue]="option.phoneno"
-      >{{ option.fullname }}</nz-auto-option
-    >
-  </nz-autocomplete>
+<div class="driver-allocation">
+  <div class="main" *ngIf="!isLoading">
+    <h2>Driver Allocation</h2>
+
+    <input
+      placeholder="Choose driver"
+      nz-input
+      [(ngModel)]="selectedDriver"
+      (input)="onInput($event)"
+      [nzAutocomplete]="driverAutocomplete"
+    />
+    <nz-autocomplete #driverAutocomplete>
+      <nz-auto-option
+        *ngFor="let option of filteredDrivers"
+        [nzValue]="option.phoneno"
+        >{{ option.fullname }}</nz-auto-option
+      >
+    </nz-autocomplete>
+  </div>
+  <div id="map" class="map"></div>
 </div>
