--- a/websiteWR/src/app/Admin/allocate-drivers/allocate-drivers.component.css
+++ b/websiteWR/src/app/Admin/allocate-drivers/allocate-drivers.component.css
@@ -1,20 +1,3 @@
-.map-content {
-  width: 100%;
-  height: 100%;
-  display: flex;
-}
-.map {
-  width: 75%;
-  height: 600px;
-}
-
-.main {
-  height: 100%;
-  width: 25%;
-  padding: 25px;
-  background-color: #f7f7f7;
-}
-
 button {
   margin-right: 8px;
   margin-top: 25px;
@@ -34,4 +17,17 @@ img.bin-image {
   display: inline-block;
   margin-top: 20px !important;
   font-size: 17px;
+}
+
+.map {
+  width: 100%;
+  height: 800px;
+}
+
+.main {
+  padding-right: 25px;
+}
+
+.bins-display {
+  margin-top: 20px;
 }
