display current depot location

--- a/websiteWR/src/app/Shared/navbar/navbar.component.html
+++ b/websiteWR/src/app/Shared/navbar/navbar.component.html
@@ -33,6 +33,15 @@
           [routerLinkActive]="['active']"
           >Allocate Drivers</a
         >
+
+        <a
+          nz-menu-item
+          class="dropdown-content"
+          href="#"
+          [routerLink]="['Pickup-Depot']"
+          [routerLinkActive]="['active']"
+          >Pickup Depot</a
+        >
       </nz-dropdown-menu>
     </li>
 
