--- a/websiteWR/src/app/Shared/navbar/navbar.component.html
+++ b/websiteWR/src/app/Shared/navbar/navbar.component.html
@@ -145,7 +145,7 @@
     </li>
 
     <li>
-      <a [routerLink]="['Sign-In']" [routerLinkActive]="['active']">Sign In</a>
+      <a [routerLink]="['Login']" [routerLinkActive]="['active']">Login</a>
     </li>
 
     <li class="dropdown">
