--- a/websiteWR/src/app/Shared/navbar/navbar.component.html
+++ b/websiteWR/src/app/Shared/navbar/navbar.component.html
@@ -148,6 +148,12 @@
       <a [routerLink]="['Login']" [routerLinkActive]="['active']">Login</a>
     </li>
 
+    <li>
+      <a [routerLink]="['Register-Business']" [routerLinkActive]="['active']"
+        >Register business</a
+      >
+    </li>
+
     <li class="dropdown">
       <a nz-dropdown [nzDropdownMenu]="menu">
         Username
