show success modal

--- a/websiteWR/src/app/Auth/register/register.component.html
+++ b/websiteWR/src/app/Auth/register/register.component.html
@@ -133,7 +133,7 @@
         </button>
       </form>
     </div>
-
+    <div nz-col nzSpan="3"></div>
     <div nz-col nzSpan="12" class="image-container">
       <img
         class="register-image"
