--- a/websiteWR/src/app/Shared/navbar/navbar.component.html
+++ b/websiteWR/src/app/Shared/navbar/navbar.component.html
@@ -128,7 +128,7 @@
 
       <li>
         <a
-          [routerLink]="['New-Pickup-Request']"
+          [routerLink]="['Reg-User/My-Pickup-Requests']"
           [routerLinkActive]="['active']">Pickup Requests
         </a>
       </li>
