--- a/websiteWR/src/app/Shared/navbar/navbar.component.html
+++ b/websiteWR/src/app/Shared/navbar/navbar.component.html
@@ -46,40 +46,6 @@
     </li>
 
     <!-- Admin -->
-    <!-- <li class="dropdown">
-      <a nz-dropdown [nzDropdownMenu]="menu2">
-          Manage Bins
-          <i nz-icon nzType="down"></i>
-      </a>
-      <nz-dropdown-menu #menu2="nzDropdownMenu">
-          <a 
-          nz-menu-item 
-          href="#"
-          class="dropdown-content"
-          [routerLink]="['Add-Bins']"
-          [routerLinkActive]="['active']"
-          >Add Bins</a>
-      
-        <a 
-          nz-menu-item 
-          href="#"
-          class="dropdown-content"
-          [routerLink]="['All-Bins']"
-          [routerLinkActive]="['active']"
-          >All Bins</a>
-
-        <a 
-          nz-menu-item 
-          href="#"
-          class="dropdown-content"
-          [routerLink]="['Full-Bins']"
-          [routerLinkActive]="['active']"
-          >Reported Bins</a>
-
-      </nz-dropdown-menu>
-    </li> -->
-
-    <!-- Admin -->
     <li class="dropdown" *ngIf="isLoggedIn">
       <a nz-dropdown [nzDropdownMenu]="menu3">
         Manage Requests
@@ -105,23 +71,54 @@
         >
       </nz-dropdown-menu>
     </li>
+    <li class="dropdown" *ngIf="isLoggedIn">
+      <a nz-dropdown [nzDropdownMenu]="menu3">
+        Manage Bins
+        <i nz-icon nzType="down"></i>
+      </a>
+      <nz-dropdown-menu #menu3="nzDropdownMenu">
+        <a
+          nz-menu-item
+          href="#"
+          class="dropdown-content"
+          [routerLink]="['Bins']"
+          [routerLinkActive]="['active']"
+          >All Bins</a
+        >
 
-    <!-- Admin -->
-    <li *ngIf="isLoggedIn">
-      <a
-        [routerLink]="['User-Management/Registered-Users']"
-        [routerLinkActive]="['active']"
-        >Manage Registered Users</a
-      >
+        <a
+          nz-menu-item
+          href="#"
+          class="dropdown-content"
+          [routerLink]="['Add-Bin']"
+          [routerLinkActive]="['active']"
+          >Add Bin</a
+        >
+      </nz-dropdown-menu>
     </li>
-
-    <!-- Admin -->
-    <li *ngIf="isLoggedIn">
-      <a
-        [routerLink]="['User-Management/Drivers']"
-        [routerLinkActive]="['active']"
-        >Manage Drivers</a
-      >
+    <li class="dropdown" *ngIf="isLoggedIn">
+      <a nz-dropdown [nzDropdownMenu]="menu3">
+        Manage Users
+        <i nz-icon nzType="down"></i>
+      </a>
+      <nz-dropdown-menu #menu3="nzDropdownMenu">
+        <a
+          nz-menu-item
+          href="#"
+          class="dropdown-content"
+          [routerLink]="['User-Management/Drivers']"
+          [routerLinkActive]="['active']"
+          >Drivers</a
+        >
+        <a
+          nz-menu-item
+          href="#"
+          class="dropdown-content"
+          [routerLink]="['User-Management/Registered-Users']"
+          [routerLinkActive]="['active']"
+          >Users</a
+        >
+      </nz-dropdown-menu>
     </li>
 
     <!--Registered User-->
@@ -141,8 +138,7 @@
       >
     </li>
 
-
-    <li>
+    <li *ngIf="!isLoggedIn">
       <a [routerLink]="['Bins']" [routerLinkActive]="['active']">All Bins</a>
     </li>
 
@@ -160,16 +156,6 @@
       >
     </li>
 
-    <!-- <li class="dropdown">
-      <a nz-dropdown [nzDropdownMenu]="menu">
-        Username
-        <i nz-icon nzType="down"></i>
-      </a>
-      <nz-dropdown-menu #menu="nzDropdownMenu">
-        <a nz-menu-item class="dropdown-content" (click)="logout()">Logout</a>
-      </nz-dropdown-menu>
-    </li> -->
-
     <li class="dropdown" *ngIf="isLoggedIn">
       <a nz-dropdown [nzDropdownMenu]="menu">
         {{ fullname }}
@@ -182,16 +168,3 @@
   </ul>
   <!-- </links> -->
 </header>
-
-<!-- <a class="dropbtn">Driver Allocations</a>
-<div class="dropdown-content">
-  <a 
-  href="#"
-  [routerLink]="['View-Allocations']"
-  [routerLinkActive]="['active']">View Allocations</a>
-  <a 
-  href="#"
-  [routerLink]="['Allocate-Drivers']"
-  [routerLinkActive]="['active']"
-  >Add Allocations</a>
-</div> -->
