--- a/websiteWR/src/app/Admin/add-bin/add-bin.component.html
+++ b/websiteWR/src/app/Admin/add-bin/add-bin.component.html
@@ -15,7 +15,7 @@
       >
         <nz-form-item>
           <nz-form-control nzErrorTip="Please enter type of material!">
-            <nz-input-group nzPrefixIcon="phone">
+            <nz-input-group nzPrefixIcon="inbox">
               <input
                 type="text"
                 nz-input
@@ -27,7 +27,7 @@
         </nz-form-item>
         <nz-form-item>
           <nz-form-control>
-            <nz-input-group nzPrefixIcon="lock">
+            <nz-input-group nzPrefixIcon="container">
               <input
                 type="text"
                 nz-input
