--- a/websiteWR/src/app/Shared/navbar/navbar.component.html
+++ b/websiteWR/src/app/Shared/navbar/navbar.component.html
@@ -46,31 +46,7 @@
     </li>
 
     <!-- Admin -->
-    <li class="dropdown" *ngIf="isLoggedIn">
-      <a nz-dropdown [nzDropdownMenu]="menu3">
-        Manage Requests
-        <i nz-icon nzType="down"></i>
-      </a>
-      <nz-dropdown-menu #menu3="nzDropdownMenu">
-        <a
-          nz-menu-item
-          href="#"
-          class="dropdown-content"
-          [routerLink]="['Request-Management/Bins']"
-          [routerLinkActive]="['active']"
-          >Bin Requests</a
-        >
-
-        <a
-          nz-menu-item
-          href="#"
-          class="dropdown-content"
-          [routerLink]="['Request-Management/Pickups']"
-          [routerLinkActive]="['active']"
-          >Pickup Requests</a
-        >
-      </nz-dropdown-menu>
-    </li>
+    
     <li class="dropdown" *ngIf="isLoggedIn">
       <a nz-dropdown [nzDropdownMenu]="menu3">
         Manage Bins
@@ -96,46 +72,9 @@
         >
       </nz-dropdown-menu>
     </li>
-    <li class="dropdown" *ngIf="isLoggedIn">
-      <a nz-dropdown [nzDropdownMenu]="menu3">
-        Manage Users
-        <i nz-icon nzType="down"></i>
-      </a>
-      <nz-dropdown-menu #menu3="nzDropdownMenu">
-        <a
-          nz-menu-item
-          href="#"
-          class="dropdown-content"
-          [routerLink]="['User-Management/Drivers']"
-          [routerLinkActive]="['active']"
-          >Drivers</a
-        >
-        <a
-          nz-menu-item
-          href="#"
-          class="dropdown-content"
-          [routerLink]="['User-Management/Registered-Users']"
-          [routerLinkActive]="['active']"
-          >Users</a
-        >
-      </nz-dropdown-menu>
-    </li>
-
-    <!--Registered User-->
-    <li *ngIf="isLoggedIn">
-      <a
-        [routerLink]="['Reg-User/My-Pickup-Requests']"
-        [routerLinkActive]="['active']"
-        >My Pickup Requests</a
-      >
-    </li>
 
     <li *ngIf="isLoggedIn">
-      <a
-        [routerLink]="['Reg-User/New-Bin-Requests']"
-        [routerLinkActive]="['active']"
-        >Request Bins</a
-      >
+      <a [routerLink]="['User-Management/Drivers']" [routerLinkActive]="['active']">Manage Drivers</a>
     </li>
 
     <li *ngIf="!isLoggedIn">
