--- a/websiteWR/src/app/Shared/navbar/navbar.component.html
+++ b/websiteWR/src/app/Shared/navbar/navbar.component.html
@@ -11,43 +11,6 @@
   <ul class="main-nav">
     <!-- Admin -->
     <li class="dropdown" *ngIf="isLoggedIn">
-      <a nz-dropdown [nzDropdownMenu]="menu1">
-        Driver Allocations
-        <i nz-icon nzType="down"></i>
-      </a>
-      <nz-dropdown-menu #menu1="nzDropdownMenu">
-        <a
-          nz-menu-item
-          class="dropdown-content"
-          href="#"
-          [routerLink]="['View-Allocations']"
-          [routerLinkActive]="['active']"
-          >View Allocations</a
-        >
-
-        <a
-          nz-menu-item
-          class="dropdown-content"
-          href="#"
-          [routerLink]="['Allocate-Drivers']"
-          [routerLinkActive]="['active']"
-          >Add Allocations</a
-        >
-
-        <!-- <a
-          nz-menu-item
-          class="dropdown-content"
-          href="#"
-          [routerLink]="['Pickup-Depot']"
-          [routerLinkActive]="['active']"
-          >Pickup Depot</a
-        > -->
-      </nz-dropdown-menu>
-    </li>
-
-    <!-- Admin -->
-    
-    <li class="dropdown" *ngIf="isLoggedIn">
       <a nz-dropdown [nzDropdownMenu]="menu3">
         Manage Bins
         <i nz-icon nzType="down"></i>
@@ -74,7 +37,11 @@
     </li>
 
     <li *ngIf="isLoggedIn">
-      <a [routerLink]="['User-Management/Drivers']" [routerLinkActive]="['active']">Manage Drivers</a>
+      <a
+        [routerLink]="['User-Management/Drivers']"
+        [routerLinkActive]="['active']"
+        >Manage Drivers</a
+      >
     </li>
 
     <li *ngIf="!isLoggedIn">
