--- a/websiteWR/src/app/Auth/login/login.component.html
+++ b/websiteWR/src/app/Auth/login/login.component.html
@@ -3,7 +3,7 @@
     <div nz-col nzSpan="12" class="image-container">
       <img class="login-image" src="assets/images/login.jpg" alt="" srcset="" />
     </div>
-    <div nz-col nzSpan="8">
+    <div nz-col nzSpan="8" style="margin-top: 10vh;">
       <h1>Sign In</h1>
       <form
         class="login-form"
