--- a/websiteWR/src/app/Shared/navbar/navbar.component.html
+++ b/websiteWR/src/app/Shared/navbar/navbar.component.html
@@ -57,8 +57,8 @@
     </li>
 
     <li *ngIf="!isLoggedIn">
-      <a [routerLink]="['Register-Business']" [routerLinkActive]="['active']"
-        >Register as business</a
+      <a [routerLink]="['Register']" [routerLinkActive]="['active']"
+        >Register</a
       >
     </li>
 
