basic homepage + map

--- a/websiteWR/src/theme.less
+++ b/websiteWR/src/theme.less
@@ -9,7 +9,8 @@
 
 // -------- Colors -----------
 // @primary-color: @blue-6;
-@primary-color: #2d8f3f;
+@primary-color: #29c32f;
+// @primary-color: #2d8f3f;
 @info-color: @primary-color;
 @success-color: @green-6;
 @processing-color: @blue-6;
