--- a/websiteWR/src/app/app.component.html
+++ b/websiteWR/src/app/app.component.html
@@ -1,5 +1,5 @@
-<app-navbar></app-navbar>
+<!-- <app-navbar></app-navbar> -->
 
 <div class="wrapper">
-    <router-outlet></router-outlet>
+  <router-outlet></router-outlet>
 </div>
