--- a/websiteWR/src/app/General-User/homepage/homepage.component.html
+++ b/websiteWR/src/app/General-User/homepage/homepage.component.html
@@ -7,10 +7,23 @@
         educating in schools, clubs and everywhere we can, we arrange public
         area clean-ups and strive to keep the Black River District clean.
       </p>
-      <button class="registerBtn" nz-button nzType="primary" [nzSize]="'large'">
+      <button
+        (click)="navigateTo('/Login')"
+        class="registerBtn"
+        nz-button
+        nzType="primary"
+        [nzSize]="'large'"
+      >
         Register as driver
       </button>
-      <button nz-button nzType="default" [nzSize]="'large'">Login</button>
+      <button
+        (click)="navigateTo('/Login')"
+        nz-button
+        nzType="default"
+        [nzSize]="'large'"
+      >
+        Login
+      </button>
     </div>
   </div>
   <div nz-col nzSpan="16">
