hide navbar on homepage

--- a/websiteWR/src/app/app.component.html
+++ b/websiteWR/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- <app-navbar></app-navbar> -->
+<app-navbar *ngIf="currentRoute != '/'"></app-navbar>
 
 <div class="wrapper">
   <router-outlet></router-outlet>
