--- a/websiteWR/src/app/app.component.css
+++ b/websiteWR/src/app/app.component.css
@@ -1,6 +1,6 @@
 .wrapper {
   margin: auto;
-  padding: 70px 30px 50px 30px;
+  padding-top: 60px;
   width: 100%;
   /* margin-top: 40px; */
   z-index: 0;
