--- a/websiteWR/src/app/Admin/manage-drivers/manage-drivers.component.html
+++ b/websiteWR/src/app/Admin/manage-drivers/manage-drivers.component.html
@@ -1,4 +1,4 @@
-<div>
+<!-- <div>
     <div nz-row style="margin-bottom: 20px;">
         <div nz-col  [nzSpan]="6">
             <nz-input-group nzSearch [nzAddOnAfter]="suffixIconButton">
@@ -21,19 +21,19 @@
 <div style="text-align:center">
     <h1>Manage Drivers</h1>
     <div class="grid">
-        <!-- <div *ngFor= "let region of listPrices" style="margin:10px; width:270px;" class="grid-item">
+        <div *ngFor= "let region of listPrices" style="margin:10px; width:270px;" class="grid-item">
             <app-region-card
                 [imageUrl]="region.imageUrl"
                 [regionName]="region.regionName"
                 [regionPrice]="region.regionPrice"
             ></app-region-card>
-        </div> -->
+        </div>
         <app-driver-card></app-driver-card>
         <app-driver-card></app-driver-card>
         <app-driver-card></app-driver-card>
         <app-driver-card></app-driver-card>
     </div>
-</div>
+</div> -->
 
 
 
