--- a/websiteWR/src/app/User-Management/drivers/drivers.component.html
+++ b/websiteWR/src/app/User-Management/drivers/drivers.component.html
@@ -1,4 +1,4 @@
-<!-- <div *ngIf="isLoading">
+<div *ngIf="isLoading">
     <app-spinner></app-spinner>
 </div>
 <div *ngIf="!isLoading">
@@ -107,4 +107,4 @@
     </app-add-driver-form>
 
 </div>
- -->
+
